RESOLVED FIXED102533
Fix assertion bug of build fix r134961
https://bugs.webkit.org/show_bug.cgi?id=102533
Summary Fix assertion bug of build fix r134961
Byungwoo Lee
Reported 2012-11-16 10:10:36 PST
! is missed. assertion condition should be '!d->m_currentWebChallenge.isNull()'
Attachments
Patch (1.58 KB, patch)
2012-11-16 10:15 PST, Byungwoo Lee
no flags
Byungwoo Lee
Comment 1 2012-11-16 10:15:14 PST
Martin Robinson
Comment 2 2012-11-16 10:19:38 PST
Comment on attachment 174715 [details] Patch Sorry. I really should have caught that.
Raphael Kubo da Costa (:rakuco)
Comment 3 2012-11-16 10:56:18 PST
Comment on attachment 174715 [details] Patch Clearing flags on attachment: 174715 Committed r134971: <http://trac.webkit.org/changeset/134971>
Raphael Kubo da Costa (:rakuco)
Comment 4 2012-11-16 10:56:27 PST
All reviewed patches have been landed. Closing bug.
Yael
Comment 5 2012-11-16 14:00:03 PST
*** Bug 102558 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.