Fix assertion bug of build fix r134961 https://bugs.webkit.org/show_bug.cgi?id=102533

Patch by Byungwoo Lee <bw80.lee@samsung.com> on 2012-11-16
Reviewed by Martin Robinson.

Assertion condition should be '!d->m_currentWebChallenge.isNull()'

* platform/network/soup/ResourceHandleSoup.cpp:
(WebCore::ResourceHandle::continueDidReceiveAuthenticationChallenge):


Canonical link: https://commits.webkit.org/120663@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134971 268f45cc-cd09-0410-ab3c-d52691b4dbfc